--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "velocity-react": "^1.4.1"
   },
   "devDependencies": {
+    "css-loader": "^1.0.0",
     "enzyme": "^3.6.0",
     "enzyme-adapter-react-16": "^1.5.0",
     "enzyme-to-json": "^3.3.4",
@@ -42,10 +43,12 @@
     "eslint-plugin-prettier": "^2.6.2",
     "eslint-plugin-react": "^7.11.1",
     "express": "^4.16.3",
+    "file-loader": "^2.0.0",
     "nodemon": "^1.18.4",
     "prettier": "^1.14.2",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
+    "style-loader": "^0.23.0",
     "webpack": "^4.17.2",
     "webpack-cli": "^3.1.0"
   }
